deploy/kubernetes/security/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: meshops
  labels: { app.kubernetes.io/component: zero-trust }
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-and-istio-control-plane
  namespace: meshops
  labels: { app.kubernetes.io/component: zero-trust }
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: kube-system } }
      ports: [{ protocol: UDP, port: 53 }, { protocol: TCP, port: 53 }]
    - to:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: istio-system } }
      ports: [{ protocol: TCP, port: 15012 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkout-call-graph
  namespace: meshops
  labels: { app.kubernetes.io/component: zero-trust }
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: [auth, catalog, search, orders, inventory, payments, notifications]
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: { matchLabels: { app.kubernetes.io/name: api-gateway } }
      ports: [{ protocol: TCP, port: 8080 }]
    - from:
        - podSelector: { matchLabels: { app.kubernetes.io/name: orders } }
      ports: [{ protocol: TCP, port: 8080 }]
    - from:
        - podSelector: { matchLabels: { app.kubernetes.io/name: payments } }
      ports: [{ protocol: TCP, port: 8080 }]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkout-service-egress
  namespace: meshops
  labels: { app.kubernetes.io/component: zero-trust }
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: [api-gateway, orders, payments]
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [auth, catalog, search, orders, inventory, payments, notifications]
      ports: [{ protocol: TCP, port: 8080 }]
